[package]
name = "handlebars-posts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.5.0-rc.3"
handlebars = "4.3.6"
toml = "0.7.3"
rand = "0.8.4"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
shuttle-runtime = "0.16.0"
shuttle-rocket = "0.16.0"
tokio = "1.28.0"